# uuis

./: Cargo.toml  calc.py  dmenu.py  flake.nix
src/: main.rs  server.rs  socket_traits.rs  types.rs  ui.rs
