[package]
name = "uuis"
version = "0.1.0"
edition = "2018"

[dependencies]
color-eyre = "0.5.11"
crossbeam = "0.8.1"
druid = { git = "https://github.com/linebender/druid", features = ["im", "serde"] }
enumflags2 = { version = "0.7.1", features = ["serde"] }
fuzzy-matcher = "0.3.7"
parking_lot = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
take_mut = "0.2.2"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
